added in digitalgov.gov

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,3 +33,5 @@ services:
       - app:jobs.18f.gov
       - app:join.18f.gov
       - app:pages.18f.gov
+      - app:digitalgov.gov
+      - app:www.digitalgov.gov
